[package]
name = "hud-bridge"
version.workspace = true
edition.workspace = true

[[bin]]
name = "poker-braids"
path = "src/main.rs"

[dependencies]
braid-engine = { path = "../braid-engine" }
poker-parser = { path = "../poker-parser" }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
futures = "0.3"
